
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2009-07-31
	* Added a minimal test case for Christian Frommeyer's MIME decoding bug,
	  Ubuntu/Launchpad Bug #320829, as expected failure (XFAIL_TESTS).
	  https://bugs.launchpad.net/ubuntu/+source/bogofilter/+bug/320829

	2009-05-28
	* Removed two scripts that are auto-built.
	* Added test case for Stephen Davies' Q-P EOL problem (see below).

	2009-05-25
	* Fixed EOL problem in quoted_printable text. Problem reported by
	  Stephen Davies and identified by Pavel Kankovsky.

	2009-03-28
	* Promoted to "stable"

1.2.0	2009-02-21 (released) 

	2009-02-20
	* Flex-2.5.35 has fix for memory allocation problem in 2.5.4,
          2.5.31, and 2.5.33, making bogofilter's flex patch obsolete.

	2009-02-12
	* Bogofilter now uses listsort in place of qsort.

	2009-01-31
	* Added token-count=n, token-count-min=n, and token-count-max=n options.
	* Minor code cleanups.

	2009-01-21

	* spamitarium.pl updated to version 0.3.0
	  (thanks to Tom Anderson)

	2009-01-11

	* For compatibility with Sun's Sun Studio 12 compiler, provide
          a name for the anonymous union in typedef word_t.
	  Patch provided by Jack Bailey.

	2008-10-20

	* update bf_compact documentation by removing explicit Berkeley DB
	  references, as it has been fixed to work with other database drivers
	  in March 2008.

	2008-10-15

	* bf_compact, bf_copy and bf_tar now support transformed program names
	  (fixes Debian Bug#501947).

	* Update sqlite3 adaptor to take advantage of sqlite3_prepare_v2()
	  API function that appeared in SQLite 3.3.9. The new _v2 interface
	  allows for more specific error messages when executing SQL