@@ -25,7 +25,7 @@ done
 RESULT=`cat "$TMPDIR/spam.2" | wc -l`.`cat "$TMPDIR/good.2" | wc -l`
 RESULT=`echo "$RESULT" | sed s@\ @@g`
 
-WANT="1787.4046"
+WANT="1787.4045"
 
 if [ "$RESULT" != "$WANT" ] || [ $verbose -ne 0 ] ; then
     echo "want: $WANT, have: $RESULT" | tee "$TMPDIR"/$OUT
