@@ -18,16 +18,16 @@ else
 fi
 
 cat >> "$TMPDIR"/ref.unicode.enabled <<EOF
-initial: 5304
-count 0 -> 5305
+initial: 5303
+count 0 -> 5304
 count 1 -> 1847
 count 2 -> 950
 count 3 -> 610
 EOF
 
 cat >> "$TMPDIR"/ref.unicode.disabled <<EOF
-initial: 5304
-count 0 -> 5304
+initial: 5303
+count 0 -> 5303
 count 1 -> 1847
 count 2 -> 949
 count 3 -> 610
