@@ -21,7 +21,7 @@ REF="$TMPDIR/wordhist.ref"
 cat <<EOF > "$REF"
 Histogram
 score   count  pct  histogram
-0.00     3516 66.30 ################################################
+0.00     3515 66.30 ################################################
 0.05        1  0.02 #
 0.10        1  0.02 #
 0.15        7  0.13 #
@@ -40,10 +40,10 @@ score   count  pct  histogram
 0.80       63  1.19 #
 0.85       14  0.26 #
 0.90       28  0.53 #
-0.95     1266 23.87 ##################
-tot      5303
-hapaxes:  ham    2594 (48.92%), spam     784 (14.78%)
-   pure:  ham    3516 (66.30%), spam    1257 (23.70%)
+0.95     1266 23.88 ##################
+tot      5302
+hapaxes:  ham    2593 (48.91%), spam     784 (14.79%)
+   pure:  ham    3515 (66.30%), spam    1257 (23.71%)
 EOF
 
 OPTS="-C -y 0"
